simtk/openmm/7.1/build/simtk/openmm/OpenMMAmoebaLibrary.java

	/**
	 * Original signature : <code>int OpenMM_AmoebaMultipoleForce_addMultipole(OpenMM_AmoebaMultipoleForce*, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, int, int, int, int, double, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_addMultipole(com.sun.jna.ptr.PointerByReference, double, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, int, int, int, int, double, double, double)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaMultipoleForce_addMultipole(Pointer target, double charge, Pointer molecularDipole, Pointer molecularQuadrupole, int axisType, int multipoleAtomZ, int multipoleAtomX, int multipoleAtomY, double thole, double dampingFactor, double polarity);
	/** Original signature : <code>int OpenMM_AmoebaMultipoleForce_addMultipole(OpenMM_AmoebaMultipoleForce*, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, int, int, int, int, double, double, double)</code> */
	int OpenMM_AmoebaMultipoleForce_addMultipole(PointerByReference target, double charge, PointerByReference molecularDipole, PointerByReference molecularQuadrupole, int axisType, int multipoleAtomZ, int multipoleAtomX, int multipoleAtomY, double thole, double dampingFactor, double polarity);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(const OpenMM_AmoebaMultipoleForce*, int, double*, OpenMM_DoubleArray*, OpenMM_DoubleArray*, int*, int*, int*, int*, double*, double*, double*)</code><br>
	 * @deprecated use the safer methods {@link #OpenMM_AmoebaMultipoleForce_getMultipoleParameters(com.sun.jna.ptr.PointerByReference, int, java.nio.DoubleBuffer, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer, java.nio.DoubleBuffer)} and {@link #OpenMM_AmoebaMultipoleForce_getMultipoleParameters(com.sun.jna.ptr.PointerByReference, int, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(Pointer target, int index, DoubleByReference charge, Pointer molecularDipole, Pointer molecularQuadrupole, IntByReference axisType, IntByReference multipoleAtomZ, IntByReference multipoleAtomX, IntByReference multipoleAtomY, DoubleByReference thole, DoubleByReference dampingFactor, DoubleByReference polarity);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(const OpenMM_AmoebaMultipoleForce*, int, double*, OpenMM_DoubleArray*, OpenMM_DoubleArray*, int*, int*, int*, int*, double*, double*, double*)</code> */
	void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(PointerByReference target, int index, DoubleBuffer charge, PointerByReference molecularDipole, PointerByReference molecularQuadrupole, IntBuffer axisType, IntBuffer multipoleAtomZ, IntBuffer multipoleAtomX, IntBuffer multipoleAtomY, DoubleBuffer thole, DoubleBuffer dampingFactor, DoubleBuffer polarity);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(const OpenMM_AmoebaMultipoleForce*, int, double*, OpenMM_DoubleArray*, OpenMM_DoubleArray*, int*, int*, int*, int*, double*, double*, double*)</code> */
	void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(PointerByReference target, int index, DoubleByReference charge, PointerByReference molecularDipole, PointerByReference molecularQuadrupole, IntByReference axisType, IntByReference multipoleAtomZ, IntByReference multipoleAtomX, IntByReference multipoleAtomY, DoubleByReference thole, DoubleByReference dampingFactor, DoubleByReference polarity);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setMultipoleParameters(OpenMM_AmoebaMultipoleForce*, int, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, int, int, int, int, double, double, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setMultipoleParameters(com.sun.jna.ptr.PointerByReference, int, double, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, int, int, int, int, double, double, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setMultipoleParameters(Pointer target, int index, double charge, Pointer molecularDipole, Pointer molecularQuadrupole, int axisType, int multipoleAtomZ, int multipoleAtomX, int multipoleAtomY, double thole, double dampingFactor, double polarity);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setMultipoleParameters(OpenMM_AmoebaMultipoleForce*, int, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, int, int, int, int, double, double, double)</code> */
	void OpenMM_AmoebaMultipoleForce_setMultipoleParameters(PointerByReference target, int index, double charge, PointerByReference molecularDipole, PointerByReference molecularQuadrupole, int axisType, int multipoleAtomZ, int multipoleAtomX, int multipoleAtomY, double thole, double dampingFactor, double polarity);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setCovalentMap(OpenMM_AmoebaMultipoleForce*, int, OpenMM_AmoebaMultipoleForce_CovalentType, const OpenMM_IntArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setCovalentMap(com.sun.jna.ptr.PointerByReference, int, int, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setCovalentMap(Pointer target, int index, int typeId, Pointer covalentAtoms);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setCovalentMap(OpenMM_AmoebaMultipoleForce*, int, OpenMM_AmoebaMultipoleForce_CovalentType, const OpenMM_IntArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_setCovalentMap(PointerByReference target, int index, int typeId, PointerByReference covalentAtoms);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getCovalentMap(const OpenMM_AmoebaMultipoleForce*, int, OpenMM_AmoebaMultipoleForce_CovalentType, OpenMM_IntArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getCovalentMap(com.sun.jna.ptr.PointerByReference, int, int, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getCovalentMap(Pointer target, int index, int typeId, Pointer covalentAtoms);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getCovalentMap(const OpenMM_AmoebaMultipoleForce*, int, OpenMM_AmoebaMultipoleForce_CovalentType, OpenMM_IntArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_getCovalentMap(PointerByReference target, int index, int typeId, PointerByReference covalentAtoms);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_getCovalentMaps(const OpenMM_AmoebaMultipoleForce*, int, OpenMM_2D_IntArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getCovalentMaps(com.sun.jna.ptr.PointerByReference, int, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_getCovalentMaps(Pointer target, int index, Pointer covalentLists);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_getCovalentMaps(const OpenMM_AmoebaMultipoleForce*, int, OpenMM_2D_IntArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_getCovalentMaps(PointerByReference target, int index, PointerByReference covalentLists);
	/**
	 * Original signature : <code>int OpenMM_AmoebaMultipoleForce_getMutualInducedMaxIterations(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getMutualInducedMaxIterations(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	int OpenMM_AmoebaMultipoleForce_getMutualInducedMaxIterations(Pointer target);
	/** Original signature : <code>int OpenMM_AmoebaMultipoleForce_getMutualInducedMaxIterations(const OpenMM_AmoebaMultipoleForce*)</code> */
	int OpenMM_AmoebaMultipoleForce_getMutualInducedMaxIterations(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setMutualInducedMaxIterations(OpenMM_AmoebaMultipoleForce*, int)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setMutualInducedMaxIterations(com.sun.jna.ptr.PointerByReference, int)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setMutualInducedMaxIterations(Pointer target, int inputMutualInducedMaxIterations);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setMutualInducedMaxIterations(OpenMM_AmoebaMultipoleForce*, int)</code> */
	void OpenMM_AmoebaMultipoleForce_setMutualInducedMaxIterations(PointerByReference target, int inputMutualInducedMaxIterations);
	/**
	 * Original signature : <code>double OpenMM_AmoebaMultipoleForce_getMutualInducedTargetEpsilon(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getMutualInducedTargetEpsilon(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	double OpenMM_AmoebaMultipoleForce_getMutualInducedTargetEpsilon(Pointer target);
	/** Original signature : <code>double OpenMM_AmoebaMultipoleForce_getMutualInducedTargetEpsilon(const OpenMM_AmoebaMultipoleForce*)</code> */
	double OpenMM_AmoebaMultipoleForce_getMutualInducedTargetEpsilon(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setMutualInducedTargetEpsilon(OpenMM_AmoebaMultipoleForce*, double)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setMutualInducedTargetEpsilon(com.sun.jna.ptr.PointerByReference, double)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setMutualInducedTargetEpsilon(Pointer target, double inputMutualInducedTargetEpsilon);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setMutualInducedTargetEpsilon(OpenMM_AmoebaMultipoleForce*, double)</code> */
	void OpenMM_AmoebaMultipoleForce_setMutualInducedTargetEpsilon(PointerByReference target, double inputMutualInducedTargetEpsilon);
	/**
	 * Original signature : <code>void OpenMM_AmoebaMultipoleForce_setExtrapolationCoefficients(OpenMM_AmoebaMultipoleForce*, const OpenMM_DoubleArray*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_setExtrapolationCoefficients(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	void OpenMM_AmoebaMultipoleForce_setExtrapolationCoefficients(Pointer target, Pointer coefficients);
	/** Original signature : <code>void OpenMM_AmoebaMultipoleForce_setExtrapolationCoefficients(OpenMM_AmoebaMultipoleForce*, const OpenMM_DoubleArray*)</code> */
	void OpenMM_AmoebaMultipoleForce_setExtrapolationCoefficients(PointerByReference target, PointerByReference coefficients);
	/**
	 * Original signature : <code>OpenMM_DoubleArray* OpenMM_AmoebaMultipoleForce_getExtrapolationCoefficients(const OpenMM_AmoebaMultipoleForce*)</code><br>
	 * @deprecated use the safer method {@link #OpenMM_AmoebaMultipoleForce_getExtrapolationCoefficients(com.sun.jna.ptr.PointerByReference)} instead
	 */
	@Deprecated 
	PointerByReference OpenMM_AmoebaMultipoleForce_getExtrapolationCoefficients(Pointer target);
	/** Original signature : <code>OpenMM_DoubleArray* OpenMM_AmoebaMultipoleForce_getExtrapolationCoefficients(const OpenMM_AmoebaMultipoleForce*)</code> */
	PointerByReference OpenMM_AmoebaMultipoleForce_getExtrapolationCoefficients(PointerByReference target);
